# OOP-7

./: CMakeLists.txt  bear.cpp  bear.hpp  main.cpp  npc.hpp  ork.cpp  ork.hpp  squirrel.cpp  squirrel.hpp  tests.cpp
